Wed Oct 29 10:50:36 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/RTCORBA/RT_Transport_Descriptor.cpp: Added a missing
	  include. 

Wed Oct 29 10:23:42 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Object_Proxy_Broker.h:
        * tao/Remote_Object_Proxy_Broker.h:

          Added #include of orbconf.h to pull in TAO_HAS_MINIMUM_CORBA flag.

        * tao/PortableServer/PortableServerC.cpp:
        * tao/PortableServer/PortableServerC.h:

          Added TAO_HAS_MINIMUM_POA guards around TAO::Objref_Traits<>
          specializations, TAO::Arg_Traits<> specializations and
          associated explicit template instantiations.

Wed Oct 29 09:53:09 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/TypeCodeFactory_Adapter.h: Added a missing inclusion. 

Tue Oct 28 23:19:18 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_scope.cpp (lookup_pseudo):

          Removed unused local variables.

Tue Oct 28 22:46:46 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService.dsp:

          Turned on RTTI in the project settings.

        * orbsvcs/orbsvcs/IFRService/IFR_BaseS.h:
        * orbsvcs/orbsvcs/IFRService/IFR_BasicS.h:
        * orbsvcs/orbsvcs/IFRService/IFR_ComponentsS.h:
        * orbsvcs/orbsvcs/IFRService/IFR_ExtendedS.h:

          Removed the IFR_Client export macro from these files.

Tue Oct 28 22:29:25 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TypeCodeFactory/TypeCodeFactoryC.cpp:

          Fixed typo in #include.

Tue Oct 28 22:22:29 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/FT_ORB.dsp:

          Updated project file list.

        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerRequest_Interceptor.cpp:

          Added include of tao/Typecode.h.

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:

          Replaced instances of TAO_INVOKE_EXCEPTION with