@@ -65,6 +65,7 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "// Traits specializations for " << node->name () << ".";
 
       *os << be_nl << be_nl
+          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << node->name () << "_ptr" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_duplicate ("
           << be_idt << be_idt_nl
@@ -75,6 +76,7 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
+          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "void" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_release ("
           << be_idt << be_idt_nl
@@ -85,6 +87,7 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
+          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << node->name () << "_ptr" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_nil (void)"
           << be_nl
@@ -93,6 +96,7 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
+          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "CORBA::Boolean" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_marshal ("
           << be_idt << be_idt_nl
